--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">CoordinatorLayoutDemo</string>
+    <string name="action_email">邮件</string>
+    <string name="action_settings">设置</string>
 </resources>
